# lb

LilaBred_bot/: .gitignore  Dockerfile  README.md  create_bot.py  main.py  pyproject.toml
LilaBred_bot/handlers/: client.py  keyboard.py  text_contacts.py  text_courses.py  to_fsm.py
